# coinbase_feed

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: log.csv
src/: csv_logger.cpp  csv_logger.hpp  ema_calculator.cpp  ema_calculator.hpp  main.cpp  ticker_data.cpp  ticker_data.hpp  ws_client.cpp  ws_client.hpp
test/: test_ema.cpp  test_parser.cpp
